--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,11 @@
                 <p class="form-paragraph">Message:</p><br>
                 <textarea type="text" name="message" id="message" placeholder="Your message..."></textarea>
             </form>
-            <button type="button" class="button">Submit</button>
+            <button type="button" class="button"><a>Submit</a></button>
         </div>
     </section>
+    <footer>
+        <p>Copyright &#x24B8;</p>
+    </footer>
 </body>
 </html>
