portfolio site done for now

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/portfolio.css">
     <title>Basic Portfolio-Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <div class="width-restraint">
+            <h1>Matthew Trabold</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section>
+        <div class="portfolio-positioning">
+            <div class="portfolio-block">
+                <p>Hangman</p>
+                <img src="assets/images/Nature.jpg" alt="">
+            </div>
+            <div class="portfolio-block">
+                <p>RPG Game</p>
+                <img src="assets/images/Nature.jpg" alt="">
+            </div>
+        </div>
+        <div class="portfolio-positioning">
+            <div class="portfolio-block">
+                <p>Trivia Game</p>
+                <img src="assets/images/Nature.jpg" alt="">
+            </div>
+            <div class="portfolio-block">
+                <p>Rutgers Info Widget</p>
+                <img src="assets/images/Nature.jpg" alt="">
+            </div>
+        </div>
+        <div class="portfolio-positioning">
+            <div class="portfolio-block">
+                <p>Rocke Paper Scissors</p>
+                <img src="assets/images/Nature.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>Copyright &#x24B8;</p>
+    </footer>
 </body>
 </html>
