finished the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,30 +22,60 @@
         </div>
     </header>
     <section>
-        <div class="portfolio-positioning">
-            <div class="portfolio-block">
-                <p>Hangman</p>
-                <img src="assets/images/Nature.jpg" alt="">
+        <div class="row">
+            <div class="column">
+                <div class="portfolio-block">
+                    <div class="port-block-position">
+                        <img src="assets/images/Nature.jpg" alt="">
+                        <div class=text>
+                            <p>Hangman</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="portfolio-block">
-                <p>RPG Game</p>
-                <img src="assets/images/Nature.jpg" alt="">
+            <div class="column">
+                <div class="portfolio-block">
+                    <div class="port-block-position">
+                        <img src="assets/images/Nature.jpg" alt="">
+                        <div class=text>
+                            <p>Hangman</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="portfolio-positioning">
-            <div class="portfolio-block">
-                <p>Trivia Game</p>
-                <img src="assets/images/Nature.jpg" alt="">
+        <div class="row">
+            <div class="column">
+                <div class="portfolio-block">
+                    <div class="port-block-position">
+                        <img src="assets/images/Nature.jpg" alt="">
+                        <div class=text>
+                            <p>Hangman</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="portfolio-block">
-                <p>Rutgers Info Widget</p>
-                <img src="assets/images/Nature.jpg" alt="">
+            <div class="column">
+                <div class="portfolio-block">
+                    <div class="port-block-position">
+                        <img src="assets/images/Nature.jpg" alt="">
+                        <div class=text>
+                            <p>Hangman</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="portfolio-positioning">
-            <div class="portfolio-block">
-                <p>Rocke Paper Scissors</p>
-                <img src="assets/images/Nature.jpg" alt="">
+        <div class = "row">
+            <div class="column">
+                <div class="portfolio-block">
+                    <div class="port-block-position">
+                        <img src="assets/images/Nature.jpg" alt="">
+                        <div class=text>
+                            <p>Hangman</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
