--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,9 @@
         </div>
     </header>
     <section>
+        <div class="section-width">
+            <h1>Portfolio</h1>
+        </div>
         <div class="row">
             <div class="column">
                 <div class="portfolio-block">
